# honeypot_analysis

./: pyproject.toml  send_data_to_opensearch.ipynb
.ipynb_checkpoints/: send_data_to_opensearch-checkpoint.ipynb
