[tool.poetry]
name = "honeypot"
version = "0.1.0"
description = ""
authors = ["maikroservice <20245897+maikroservice@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pandas = "^1.5.3"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
